# log_viewer

./: .gitignore  CMakeLists.txt  LogViewer.spec  README.md  build.ps1  build.sh  pyproject.toml  requirements.txt
.github/workflows/: black.yml
src/cpp/bindings/: bindings.cpp
src/cpp/file_loader/: file_loader.cpp  file_loader.hpp
src/python/: main.py
src/python/core/: file_loader.py  file_watcher.py
src/python/gui/: main_window.py
src/python/utils/: logger.py  memory_helpers.py
